--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,17 @@
     <string name="login_form">Login form</string>
     <string name="login">Login</string>
     <string name="password">Password</string>
-    <string name="lost_your_login_or_password">Lost your login or password?</string>
-    <string name="create_account">Create Account?</string>
+    <string name="lost_your_login_or_password">Lost your login or password</string>
+    <string name="create_account">Create Account</string>
     <string name="invalid_username_or_password">Неверный логин или пароль!!!</string>
     <string name="enter_the_data">Введите данные</string>
     <string name="succes">Success</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="registration_form">Registration form</string>
+    <string name="e_mail">E-mail:</string>
+    <string name="сreate_an_account">Сreate an account</string>
+    <string name="send_instructions">send instructions</string>
 
 
 </resources>
