Создал экранs Password Recovery и Registration, добавил заглушки.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="e_mail">E-mail:</string>
     <string name="сreate_an_account">Сreate an account</string>
     <string name="send_instructions">send instructions</string>
+    <string name="sendInstructions">Инструкции отправлены</string>
 
 
 </resources>
